--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/react-fontawesome": "^0.2.2"
+  },
+  "devDependencies": {
     "gh-pages": "^6.3.0"
   }
 }
